[package]
name = "rhino2d-io"
description = "File reader/writer for Inochi2D models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = "1.0.81"
serde_ignored = "0.1.3"
byteorder = "1.4.3"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.0"
